# src/classes/models-controllers/InterestCategory.js
@@ -2,20 +2,20 @@ const BaseController = require('./Base');
 const InterestCategory = require('../../models/InterestCategory');
 const { getErrorObject } = require('../../helpers/errors');
 
-class DeviceController extends BaseController {
+class InterestCategoryController extends BaseController {
   /**
-   * returns refreshToken model
+   * returns interest category model
    */
   static get model() {
     return InterestCategory;
   }
 
   /**
-   * returns notFound error, throwing when refreshToken not found by getOne or getById
+   * returns notFound error, throwing when interest category not found by getOne or getById
    */
   static get notFoundError() {
     return getErrorObject('INTEREST_CATEGORY_NOT_FOUND', 404);
   }
 }
 
-module.exports = DeviceController;
+module.exports = InterestCategoryController;
