# src/routes/business/get-one.js
@@ -1,0 +1,18 @@
+const error = require('debug')('app:error:business/get-one');
+const Business = require('../../classes/models-controllers/Business');
+const { getErrorObject } = require('../../helpers/errors');
+const bugTracker = require('./../../classes/BugTracker');
+
+module.exports = async (req, res) => {
+  const { id } = req.params;
+
+  try {
+    const business = await Business.getById(id);
+
+    res.json(business);
+  } catch (err) {
+    error(err);
+    bugTracker.captureException(err);
+    throw getErrorObject('GENERAL_ERROR', 400, err);
+  }
+};
